--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -101,8 +101,7 @@ textarea {
   letter-spacing: 0.1rem;
 }
 
-.cardcon,
-.cardcon2 {
+.cardcon {
   display: flex;
   flex-wrap: wrap;
   padding: 50px 0;
@@ -250,7 +249,7 @@ span {
   flex-wrap: wrap;
   gap: 20px;
   height: auto;
-  box-sizing: border-box;
+  min-height: 90vh;
   background: linear-gradient(180deg, #7c9eb0, #7c9eb0);
   justify-content: space-evenly;
   align-items: center;
@@ -305,13 +304,10 @@ span {
   font-size: 20px;
   color: #000000;
   text-align: center;
-  width: 100%;
-  height: 62.8vh;
-  padding: 50px;
   display: flex;
   font-family: "century Gothic", "lato", "sans-serif";
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: transparent;
   gap: 40px;
@@ -512,15 +508,30 @@ span {
 
 .input {
   margin-top: 15px;
-  width: 92%;
+  width: 90%;
   outline: none;
   border-radius: 8px;
-  height: 35px;
+  height: auto;
   border: 1.5px solid #ecedec;
   background: transparent;
-  padding-left: 10px;
 }
 
+.inputgen {
+  margin-top: 15px;
+  width: 96%;
+  outline: none;
+  border-radius: 8px;
+  height: 37px;
+  border: 1.5px solid #ecedec;
+  background: transparent;
+}
+.inputgen:focus {
+  border: 1.5px solid #2d79f3;
+}
+.inputgen option{
+  color: #000;
+  text-align: center;
+}
 .input:focus {
   border: 1.5px solid #2d79f3;
 }
@@ -536,7 +547,9 @@ span {
 }
 
 .input-field .input:focus~.label,
-.input-field .input:valid~.label {
+.input-field .input:valid~.label,
+.input-field .inputgen:focus~.label,
+.input-field .inputgen:valid~.label {
   top: 5px;
   left: 5px;
   font-size: 12px;
@@ -549,7 +562,7 @@ span {
 .submit-btn {
   margin-top: 20px;
   margin-bottom: 20px;
-  height: 55px;
+  height: 45px;
   width: 100%;
   background: #f2f2f2;
   border-radius: 11px;
@@ -574,9 +587,8 @@ span {
   letter-spacing: 0.1rem;
 }
 
-#file-input {
-  width: 350px;
-  max-width: 100%;
+.form-control #file-input {
+  width: 97%;
   color: #444;
   padding: 2px;
   background: #fff;
@@ -767,11 +779,11 @@ hr {
     gap: 10px;
   }
 
-  .search-container{
+  .search-container {
     width: 70%;
   }
 
-  .searchbutton{
+  .searchbutton {
     padding: 3px 5px;
     font-size: 0.8rem;
   }
@@ -821,6 +833,7 @@ hr {
     width: 40%;
     height: auto;
   }
+
   .profile-card {
     width: 60%;
   }
@@ -873,8 +886,13 @@ hr {
     padding: 20px 0;
   }
 
+  .cardcon2 {
+    height: auto;
+    box-sizing: border-box;
+  }
+
   .cart-nav {
-    height: 8vh;
+    height: 100%;
     flex-direction: column;
     padding: 10px;
   }
@@ -894,7 +912,8 @@ hr {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
-    height: 50vh;
+    width: 100%;
+    height: 100%;
     text-align: center;
     overflow: hidden;
     box-sizing: border-box;
@@ -956,10 +975,12 @@ hr {
   .searchbar {
     min-height: 35px;
   }
+
   .ordcon {
     text-align: center;
     overflow: hidden;
   }
+
   .profile-card {
     width: 70%;
   }
@@ -987,6 +1008,10 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .cardcon2 {
+    height: auto;
   }
 
   .cartlen {
@@ -1031,7 +1056,8 @@ hr {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
-    height: 50vh;
+    height: 100%;
+    width: 100%;
     text-align: center;
     overflow: hidden;
     box-sizing: border-box;
@@ -1045,7 +1071,7 @@ hr {
   .cart-shop {
     padding: 8px 14px;
     font-size: 14px;
-    width: 100%;
+    width: 90%;
     text-align: center;
   }
 
@@ -1070,11 +1096,12 @@ hr {
     height: 45px;
     font-size: 16px;
   }
+
   .profile-card {
     width: 80%;
   }
 
-  .editcon{
+  .editcon {
     justify-content: center;
     align-items: center;
   }
